field_definition doc improved with the definition of host entity timestamp

--- a/docs/field_definition.org
+++ b/docs/field_definition.org
@@ -23,6 +23,9 @@
    - percDiskUsed ::
 	Computed as 100 * =compute.node.disk.now= / =compute.node.disk.tot=
 
+   - timestamp ::
+	Is the timestamp associated to the most recent measure
+
 * Entity type: 'region'
    - ipAssigned ::
 	Is the =region.used_ip= 
